--- a/src/index.html
+++ b/src/index.html
@@ -13,25 +13,64 @@
 
   <oag-application>
 
-    <oag-hero id="hero" title="Der Fund der Meilensteine von Gemeinlebarn" subtitle="Die Entdeckung im Herbst 1998" background-image="assets/hero-sample.jpeg" background-overlay="rgba(0, 0, 0, 0.5)">
+    <oag-hero id="hero" title="Der Fund der Meilensteine von Gemeinlebarn" subtitle="Die Entdeckung im Herbst 1998" background-image="assets/hero-sample.jpeg" background-overlay="rgba(0, 0, 0, 0.25)">
     </oag-hero>
 
-    <oag-content>
-      <h2>Der Auslöser</h2>
+    <!-- Kapitel 1 - Der Weg zum Fund -->
 
+    <oag-content>
+      <h2>Der Weg zum Fund</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat minus quam officia, laboriosam voluptate ab sint neque vel exercitationem! Vero aperiam accusamus necessitatibus rerum? Eius qui corporis, nihil quae ducimus ab debitis ut cum culpa provident quibusdam consequuntur nam ad minima fuga? Deserunt odio explicabo laboriosam iste minima ea quidem molestias, magnam asperiores enim ullam nulla mollitia! Quisquam atque praesentium nihil sint rem reprehenderit quaerat quo consectetur cum beatae maiores eaque, dolorum aspernatur facilis, nemo saepe, a nesciunt dolor neque illum natus officia et fuga! Provident, voluptatibus nesciunt laboriosam quibusdam sunt voluptate vel sequi atque numquam unde dolor cupiditate ipsum.</p>
 
     </oag-content>
 
-    <oag-content max-width="outer">
-      Map
-    </oag-content>
+    <oag-figure caption="Der Untersuchungsraum und die Funndorte" reference="oag-a-ufg-1-1-1" max-width="outer">
+      <div id="map-fundort" class="map"></div>
+    </oag-figure>
 
     <oag-content>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit at maxime enim suscipit et voluptates, reprehenderit reiciendis assumenda delectus vitae iusto, ipsam, eligendi rerum quasi earum ex! Debitis atque ad suscipit harum, officiis, laudantium nobis commodi cumque libero sapiente in nostrum illo aut laboriosam accusamus deleniti sint nesciunt laborum id impedit eum. Architecto, nemo. Eligendi ut a dolores, magni eaque dolor, veritatis non, iste dolorum nobis amet blanditiis ipsa explicabo perspiciatis quos temporibus quidem. Dolores repellat molestiae hic unde quasi magni provident reiciendis beatae! Error voluptate ad dolorem laboriosam blanditiis, similique accusamus veritatis modi rem nemo! Veniam inventore corrupti rem.</p>
     </oag-content>
 
+    <!-- Kapitel 2 - Die Ausgrabungen -->
+
+    <oag-content>
+      <h2>Die Ausgrabungen</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat minus quam officia, laboriosam voluptate ab sint neque vel exercitationem! Vero aperiam accusamus necessitatibus rerum? Eius qui corporis, nihil quae ducimus ab debitis ut cum culpa provident quibusdam consequuntur nam ad minima fuga? Deserunt odio explicabo laboriosam iste minima ea quidem molestias, magnam asperiores enim ullam nulla mollitia! Quisquam atque praesentium nihil sint rem reprehenderit quaerat quo consectetur cum beatae maiores eaque, dolorum aspernatur facilis, nemo saepe, a nesciunt dolor neque illum natus officia et fuga! Provident, voluptatibus nesciunt laboriosam quibusdam sunt voluptate vel sequi atque numquam unde dolor cupiditate ipsum.</p>
+    </oag-content>
+
+
+    <oag-figure caption="Der Untersuchungsraum und die Funndorte" reference="oag-a-ufg-1-1-1" max-width="outer">
+      <div id="map-fundort" class="map"></div>
+    </oag-figure>
+
+
+    <oag-content>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat minus quam officia, laboriosam voluptate ab sint neque vel exercitationem! Vero aperiam accusamus necessitatibus rerum? Eius qui corporis, nihil quae ducimus ab debitis ut cum culpa provident quibusdam consequuntur nam ad minima fuga? Deserunt odio explicabo laboriosam iste minima ea quidem molestias, magnam asperiores enim ullam nulla mollitia! Quisquam atque praesentium nihil sint rem reprehenderit quaerat quo consectetur cum beatae maiores eaque, dolorum aspernatur facilis, nemo saepe, a nesciunt dolor neque illum natus officia et fuga! Provident, voluptatibus nesciunt laboriosam quibusdam sunt voluptate vel sequi atque numquam unde dolor cupiditate ipsum.</p>
+    </oag-content>
+
+    <oag-figure caption="A" reference="oag-a-ufg-1-1-1">
+      <img src="assets/hero-sample.jpeg" alt="">
+    </oag-figure>
+
+    <oag-horizontal-gallery images='[
+    { "src": "assets/hero-sample.jpeg", "caption": "Bild 1", "reference": "oag-a-ufg-1-1-1" },
+    { "src": "assets/hero-sample.jpeg", "caption": "Bild 2", "reference": "oag-a-ufg-1-1-1" },
+    { "src": "assets/hero-sample.jpeg", "caption": "Bild 3", "reference": "oag-a-ufg-1-1-1" }
+    ]'>
+    </oag-horizontal-gallery>
+
+
+    <oag-content>
+      <h2>Quellen</h2>
+      <oag-reference id="oag-a-ufg-1-1-1" reference-code="AT-OAG.A.UFG.1.1.1" title="Fotoserie zum Meilensteinfund (Graf)">
+      </oag-reference>
+    </oag-content>
+
   </oag-application>
+
+  <oag-references>
+  </oag-references>
 
   <script>
     const hero = document.getElementById('hero');
