[Feature] Lightbox Component & CSS Variables per Component

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,51 @@
 <body>
     <oag-application>
 
+        <oag-figure
+            caption="Der Untersuchungsraum und die Funndorte"
+            reference="oag-a-ufg-1-1-1">
+
+            <oag-lightbox caption="Caption">
+                <img src="https://data.ortsarchiv-gemeinlebarn.org/meilensteine/fotoserie-graf/01.jpeg" alt="">
+            </oag-lightbox>
+        </oag-figure>
+
+        <oag-figure
+            max-width="outer"
+            caption="Der Untersuchungsraum und die Funndorte"
+            reference="oag-a-ufg-1-1-1">
+
+            <img src="https://data.ortsarchiv-gemeinlebarn.org/meilensteine/vectors/meilensteine.svg" alt="">
+        </oag-figure>
+
+        <oag-figure caption="Caption" reference="oag-a-ufg-1-1-1">
+            <oag-lightbox caption="Caption">
+                <img src="https://images.unsplash.com/photo-1670516538186-48cde94ba959?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="">
+                <oag-tooltip class="tooltip1" x="50%" y="50%">
+                    <p>Content</p>
+                </oag-tooltip>
+
+                <oag-tooltip class="tooltip1" x="10%" y="50%" icon="information">
+                    <p>Content</p>
+                </oag-tooltip>
+                <oag-tooltip x="20%" y="50%" icon="help">
+                    <p>Content</p>
+                </oag-tooltip>
+                <oag-tooltip class="tooltip1" x="30%" y="30%" icon="person">
+                    <p>Content</p>
+                </oag-tooltip>
+                <oag-tooltip x="60%" y="30%" icon="alert">
+                    <p>Content</p>
+                </oag-tooltip>
+                <oag-tooltip x="70%" y="70%" icon="pin">
+                    <p>Content</p>
+                </oag-tooltip>
+                <oag-tooltip x="80%" y="90%" icon="time">
+                    <p>Content</p>
+                </oag-tooltip>
+            </oag-lightbox>
+        </oag-figure>
+
         <oag-figure caption="A" reference="oag-a-ufg-1-1-1">
             <img src="https://images.unsplash.com/photo-1670516538186-48cde94ba959?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="">
             <oag-tooltip class="tooltip1" x="50%" y="50%">
