[Feature] Image Comparison Component

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,21 @@
             caption="Der Untersuchungsraum und die Funndorte"
             reference="oag-a-ufg-1-1-1">
 
+            <oag-image-comparison
+                slider-icon-position="18%"
+                slider-width="2"
+                slider-position="35"
+                label-left="A"
+                label-right="B"
+                src-left="https://data.ortsarchiv-gemeinlebarn.org/meilensteine/comparisons/zeichnung-pfahl/Zeichnung.jpg"
+                src-right="https://data.ortsarchiv-gemeinlebarn.org/meilensteine/comparisons/zeichnung-pfahl/Digital.jpg">
+            </oag-image-comparison>
+        </oag-figure>
+
+        <oag-figure
+            caption="Der Untersuchungsraum und die Funndorte"
+            reference="oag-a-ufg-1-1-1">
+
             <oag-lightbox caption="Caption">
                 <img src="https://data.ortsarchiv-gemeinlebarn.org/meilensteine/fotoserie-graf/01.jpeg" alt="">
             </oag-lightbox>
@@ -43,7 +58,7 @@
                 <oag-tooltip class="tooltip1" x="10%" y="50%" icon="information">
                     <p>Content</p>
                 </oag-tooltip>
-                <oag-tooltip x="20%" y="50%" icon="help">
+                <oag-tooltip x="20%" y="50%" icon="help" initial-show="true">
                     <p>Content</p>
                 </oag-tooltip>
                 <oag-tooltip class="tooltip1" x="30%" y="30%" icon="person">
