--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <oag-application>
+    <oag-application desktop-optimized="true" desktop-only="false">
 
         <oag-figure
             caption="Der Untersuchungsraum und die Funndorte"
