[Feature] Fixing OL Touch Class and Hero Height

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,24 @@
 <body>
     <oag-application desktop-optimized="true" desktop-only="false">
 
+        <oag-hero
+            id="hero"
+            headline="Der Fund der Meilensteine von Gemeinlebarn"
+            caption="Die Entdeckung im Herbst 1998"
+            background-image="https://images.unsplash.com/photo-1560826187-7df41feb4831?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1412&q=80"
+            background-overlay="rgba(0, 0, 0, 0.25)">
+        </oag-hero>
+
+        <oag-hero
+            id="hero"
+            headline="Der Fund der Meilensteine von Gemeinlebarn"
+            caption="Die Entdeckung im Herbst 1998"
+            background-image="https://images.unsplash.com/photo-1560826187-7df41feb4831?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1412&q=80"
+            background-overlay="rgba(0, 0, 0, 0.25)"
+            big-content="true">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, vel? Reiciendis accusamus, nisi expedita adipisci totam ea voluptatum debitis autem, itaque, sed necessitatibus maxime! Possimus deserunt sapiente culpa velit, at sunt exercitationem repudiandae cupiditate hic, quis quidem saepe obcaecati iure quibusdam, aliquid architecto eligendi odio dicta ducimus nam. Aliquid obcaecati minima iusto laudantium ad facere commodi enim odit optio, sit nemo sed maxime consectetur veritatis dolorum quas magni excepturi ratione quae labore dolorem ab, non explicabo nostrum! Ipsam illo consequatur facere quos incidunt cumque porro alias sed commodi totam placeat ad, nostrum quaerat, dicta doloremque? Perferendis esse eius, mollitia quos vero dolor nisi molestias autem numquam vel perspiciatis quibusdam dolores similique iste! Quidem, qui velit. Officia nobis quo, ab dolore velit quia quam eum reiciendis ut debitis ipsa expedita quod, dignissimos eligendi perferendis ipsum harum? Necessitatibus id incidunt magnam, deserunt numquam laudantium ad praesentium optio autem explicabo facilis possimus porro rerum hic non velit vel, ratione quas blanditiis dolore fugit quae cumque earum minus. Quam iste eligendi facilis cupiditate, explicabo voluptate sed quasi commodi, impedit voluptatibus doloremque provident eaque adipisci nam perferendis ut magnam? Doloremque facere consequuntur reiciendis eius ab repudiandae omnis facilis minima explicabo! Dolorum, vitae itaque quis placeat dolorem exercitationem similique vero assumenda. Beatae voluptatum impedit laboriosam laudantium officia voluptatem quidem assumenda pariatur, reiciendis neque, deserunt eius provident quasi sequi corporis deleniti maxime! Officia quaerat mollitia quae eveniet reiciendis nesciunt tenetur minima explicabo hic, nobis similique modi quos, vel iusto esse eaque repudiandae inventore rerum excepturi aut optio perferendis iure, delectus soluta? Pariatur, sed! Pariatur vitae itaque perferendis debitis velit corrupti, eligendi est ut, ipsum voluptas similique voluptates culpa illo quas commodi, voluptatum a laudantium quos. Distinctio eligendi eius unde laborum et sapiente, consequatur error eum aut molestias repellendus minima minus quaerat pariatur nobis rerum? Alias, assumenda odit?</p>
+        </oag-hero>
+
         <oag-figure
             caption="Der Untersuchungsraum und die Funndorte"
             reference="oag-a-ufg-1-1-1">
@@ -109,14 +127,6 @@
             }
         </style>
 
-        <oag-hero
-            id="hero"
-            headline="Der Fund der Meilensteine von Gemeinlebarn"
-            caption="Die Entdeckung im Herbst 1998"
-            background-image="https://images.unsplash.com/photo-1560826187-7df41feb4831?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1412&q=80"
-            background-overlay="rgba(0, 0, 0, 0.25)">
-        </oag-hero>
-
         <oag-content>
             <h2>Quellen aus dem Ortsarchiv</h2>
             <oag-reference
@@ -162,7 +172,7 @@
             caption="Der Untersuchungsraum und die Funndorte"
             reference="oag-a-ufg-1-1-1">
 
-            <oag-map id="map-strassen"></oag-map>
+            <oag-map id="map-strassen" disable-touch-class="false"></oag-map>
         </oag-figure>
 
         <!-- Kapitel 1 - Der Weg zum Fund -->
