[Feature] New CSS Variables for Hero Component

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,15 @@
     <script src="https://cdn.jsdelivr.net/npm/ol@v7.4.0/dist/ol.js"></script>
 
     <link rel="stylesheet" href="/build/oag-components.css" />
+
+    <style>
+        #hero {
+            min-height: 0;
+            --logo-display: none;
+            --component-content-direction: column-reverse;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -22,10 +31,11 @@
             caption="Die Entdeckung im Herbst 1998"
             background-image="https://images.unsplash.com/photo-1560826187-7df41feb4831?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1412&q=80"
             background-overlay="rgba(0, 0, 0, 0.25)">
+            <p>Content</p>
         </oag-hero>
 
         <oag-hero
-            id="hero"
+            id="hero2"
             headline="Der Fund der Meilensteine von Gemeinlebarn"
             caption="Die Entdeckung im Herbst 1998"
             background-image="https://images.unsplash.com/photo-1560826187-7df41feb4831?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1412&q=80"
