--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,44 @@
 <body>
     <oag-application desktop-optimized="true" desktop-only="false">
 
+        <oag-screen-map opened="true">
+            <h2>Meilensteinfund 1997</h2>
+            <oag-screen-content-layer-item slug="meilensteine" color="#d2232a">
+                Meilensteine
+            </oag-screen-content-layer-item>
+            <oag-screen-content-layer-item slug="loecher" color="yellow">
+                Pfahllöcher
+            </oag-screen-content-layer-item>
+            <oag-screen-content-layer-item slug="schotterentnahmen-1997">
+                Geöffnete Schotterentnahmen
+            </oag-screen-content-layer-item>
+
+            <h2>Römische Gegend</h2>
+            <oag-screen-content-layer-item slug="schotterentnahmen">
+                Schotterentnahmen entlang der B43 (ab 1973)
+            </oag-screen-content-layer-item>
+            <oag-screen-content-layer-item slug="Römerstraße">
+                Römerstraße
+            </oag-screen-content-layer-item>
+            <oag-screen-content-layer-item slug="kastelle">
+                Kastelle, Wachtürme und Zentren in der Nähe
+            </oag-screen-content-layer-item>
+
+            <h2>Hintergrundkarte</h2>
+            <oag-screen-background-layer-item slug="basemap-orthophoto" active="true">
+                Aktuelles Orthophoto
+            </oag-screen-background-layer-item>
+            <!-- <oag-screen-background-layer-item slug="basemap-standard">
+                Aktuelle Karte (Basemap)
+            </oag-screen-background-layer-item>
+            <oag-screen-background-layer-item slug="basemap-grau">
+                Aktuelle Karte in Grau (Basemap)
+            </oag-screen-background-layer-item> -->
+            <oag-screen-background-layer-item slug="osm">
+                Aktuelle Karte (Open Street Map)
+            </oag-screen-background-layer-item>
+        </oag-screen-map>
+
         <oag-hero
             id="hero"
             headline="Der Fund der Meilensteine von Gemeinlebarn"
@@ -247,6 +285,37 @@
                     ]
                 })
             }));
+        });
+
+        let screenMap;
+
+        document.querySelector("oag-screen-map").addEventListener("readyMap", ($event) => {
+            screenMap = $event.detail;
+
+            screenMap.getView().setCenter([1758924.107577, 6163175.814151]);
+            screenMap.getView().setZoom(10);
+        });
+
+        document.querySelectorAll('oag-screen-content-layer-item').forEach(el => {
+            el.addEventListener('showLayer', event => console.log(event));
+            el.addEventListener('hideLayer', event => console.log(event));
+            el.addEventListener('highlightLayer', event => { console.log("highlightLayer!") })
+        });
+
+        document.querySelectorAll('oag-screen-background-layer-item').forEach(el => {
+            el.addEventListener('click', event => {
+
+                const slug = event.srcElement.getAttribute('slug');
+
+                document.querySelectorAll('oag-screen-background-layer-item').forEach(e => e.setAttribute('active', 'false'));
+                event.srcElement.setAttribute('active', 'true');
+
+                screenMap.getLayers().forEach(l => {
+                    console.log(l.values_.name);
+                    l.setVisible(l.values_.name.indexOf(slug) > -1)
+                });
+
+            });
         });
 
     </script>
