[Feature] Figure without Reference

--- a/src/index.html
+++ b/src/index.html
@@ -83,8 +83,7 @@
         </oag-hero>
 
         <oag-figure
-            caption="Der Untersuchungsraum und die Funndorte"
-            reference="oag-a-ufg-1-1-1">
+            caption="Der Untersuchungsraum und die Funndorte">
 
             <oag-image-comparison
                 slider-icon-position="18%"
