[Feature] New Gallery Grid Component (Lightbox)

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,26 @@
 <body>
     <oag-application desktop-optimized="true" desktop-only="false">
 
-        <oag-screen-map opened="true">
+        <oag-content>
+            <oag-gallery preview="true" images='[
+            { "src": "https://data.ortsarchiv-gemeinlebarn.org/meilensteine/fotoserie-graf/01.jpeg", "caption": "Bild 1", "reference": "oag-a-ufg-1-1-1" },
+            { "src": "https://data.ortsarchiv-gemeinlebarn.org/meilensteine/fotoserie-graf/02.jpeg", "caption": "Bild 1", "reference": "oag-a-ufg-1-1-1" },
+            { "src": "https://data.ortsarchiv-gemeinlebarn.org/meilensteine/fotoserie-graf/03.jpeg", "caption": "Bild 1", "reference": "oag-a-ufg-1-1-1" },
+            { "src": "https://data.ortsarchiv-gemeinlebarn.org/meilensteine/fotoserie-graf/04.jpeg", "caption": "Bild 1", "reference": "oag-a-ufg-1-1-1" },
+            { "src": "https://data.ortsarchiv-gemeinlebarn.org/meilensteine/fotoserie-graf/05.jpeg", "caption": "Bild 1", "reference": "oag-a-ufg-1-1-1" },
+            { "src": "https://data.ortsarchiv-gemeinlebarn.org/meilensteine/fotoserie-graf/06.jpeg", "caption": "Bild 1", "reference": "oag-a-ufg-1-1-1" },
+            { "src": "https://data.ortsarchiv-gemeinlebarn.org/meilensteine/fotoserie-graf/07.jpeg", "caption": "Bild 1", "reference": "oag-a-ufg-1-1-1" },
+            { "src": "https://data.ortsarchiv-gemeinlebarn.org/meilensteine/fotoserie-graf/08.jpeg", "caption": "Bild 1", "reference": "oag-a-ufg-1-1-1" },
+            { "src": "https://data.ortsarchiv-gemeinlebarn.org/meilensteine/fotoserie-graf/09.jpeg", "caption": "Bild 1", "reference": "oag-a-ufg-1-1-1" },
+            { "src": "https://data.ortsarchiv-gemeinlebarn.org/meilensteine/fotoserie-graf/10.jpeg", "caption": "Bild 1", "reference": "oag-a-ufg-1-1-1" },
+            { "src": "https://data.ortsarchiv-gemeinlebarn.org/meilensteine/fotoserie-graf/11.jpeg", "caption": "Bild 1", "reference": "oag-a-ufg-1-1-1" },
+            { "src": "https://data.ortsarchiv-gemeinlebarn.org/meilensteine/fotoserie-graf/12.jpeg", "caption": "Bild 1", "reference": "oag-a-ufg-1-1-1" },
+            { "src": "https://data.ortsarchiv-gemeinlebarn.org/meilensteine/fotoserie-graf/13.jpeg", "caption": "Bild 1", "reference": "oag-a-ufg-1-1-1" },
+            { "src": "https://data.ortsarchiv-gemeinlebarn.org/meilensteine/fotoserie-graf/14.jpeg", "caption": "Bild 1", "reference": "oag-a-ufg-1-1-1" }
+        ]'></oag-gallery>
+        </oag-content>
+
+        <oag-screen-map>
             <h2>Meilensteinfund 1997</h2>
             <oag-screen-content-layer-item slug="meilensteine" color="#d2232a">
                 Meilensteine
