--- a/src/index.html
+++ b/src/index.html
@@ -194,20 +194,6 @@
         </style>
 
         <oag-content>
-            <h2>Quellen aus dem Ortsarchiv</h2>
-            <oag-reference
-                id="oag-a-ufg-1-1-1"
-                label="Titel der Archivalie"
-                reference-code="AT-OAG.A.UFG.1.1.1">
-            </oag-reference>
-            <oag-reference
-                id="oag-a-ufg-1-1-1"
-                label="Titel der Archivalie"
-                reference-code="AT-OAG.A.UFG.1.1.1">
-            </oag-reference>
-        </oag-content>
-
-        <oag-content>
             <h1>Headline 1</h1>
             <h2>Headline 2</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat minus quam officia, laboriosam voluptate ab sint neque vel exercitationem! Vero aperiam accusamus necessitatibus rerum? Eius qui corporis, nihil quae ducimus ab debitis ut cum culpa provident quibusdam consequuntur nam ad minima fuga? Deserunt odio explicabo laboriosam iste minima ea quidem molestias, magnam asperiores enim ullam nulla mollitia! Quisquam atque praesentium nihil sint rem reprehenderit quaerat quo consectetur cum beatae maiores eaque, dolorum aspernatur facilis, nemo saepe, a nesciunt dolor neque illum natus officia et fuga! Provident, voluptatibus nesciunt laboriosam quibusdam sunt voluptate vel sequi atque numquam unde dolor cupiditate ipsum.</p>
@@ -268,7 +254,29 @@
 
         <oag-content>
             <h2>Quellen</h2>
-            <oag-reference id="oag-a-ufg-1-1-1" reference-code="AT-OAG.A.UFG.1.1.1" title="Fotoserie zum Meilensteinfund (Graf)">
+
+            <oag-reference
+                id="oag-a-ufg-1-1-1"
+                reference-code="Ortsarchiv Gemeinlebarn, AT-OAG.A.UFG.2.1.1.1"
+                label="Fotoserie zum Meilensteinfund (Alois Graf)">
+            </oag-reference>
+            <oag-reference
+                id="oag-a-ufg-2-1-1-1"
+                reference-code="Ortsarchiv Gemeinlebarn, AT-OAG.A.UFG.2.1.2"
+                label="Fotos zum Meilensteinfund (Gattringer/Neugebauer, BDA)">
+            </oag-reference>
+            <oag-reference
+                id="oag-a-ufg-2-1-1-1"
+                reference-code="Ortsarchiv Gemeinlebarn, AT-OAG.B.GDA.GDA005082 bis GDA005087"
+                label="Einsetzung des Meilensteinreplikats, 15.07.1999">
+            </oag-reference>
+            <oag-reference
+                id="oag-a-ufg-2-1-1-1"
+                reference-code="Ortsarchiv Gemeinlebarn, AT-OAG.B.GDA.GDA005160 bis GDA005165"
+                label="Fest zur Aufstellung des Meilensteinreplikats, 17.09.1999">
+            </oag-reference>
+            <oag-reference id="oag-a-ufg-2-1-1-1" content="literatur">
+                Gattringer, A., Neugebauer, J.-W., & Ubl, H. (1999). Zur Bedeutung der Auffindung zweier römischer Meilensteine im Jahre 1998 in Gemeinlebarn, Stadtgemeinde Traismauer, Niederösterreich. <em>Fundberichte aus Österreich</em>, 37/1998, 179–211.
             </oag-reference>
         </oag-content>
 
