feat(demos): establishing and demoing the audio and chapter feature

--- a/src/demos/audio.html
+++ b/src/demos/audio.html
@@ -40,9 +40,20 @@
                 </ul>
             </oag-content>
             <oag-content>
-                <oag-audio src="#" title="Titel">
-                    Description
-                </oag-audio>
+                <oag-chapter-audio>
+                    <oag-audio
+                        title="Der Fund der Meilensteine von Gemeinlebarn"
+                        caption="Die Entdeckung im Herbst 1998"
+                        audio-src="https://data.ortsarchiv-gemeinlebarn.org/meilensteine/audio/Meilensteine-Audio-001.mp3"
+                        image-src="https://data.ortsarchiv-gemeinlebarn.org/meilensteine/fotos/ausgrabung/Meilensteine-Fotos-033-gat.jpeg">
+                    </oag-audio>
+                    <oag-audio
+                        title="Die Bedeutung der Meilensteine"
+                        caption="Ein Blick auf die römische Geschichte"
+                        audio-src="https://data.ortsarchiv-gemeinlebarn.org/meilensteine/audio/Meilensteine-Audio-002.mp3">
+                   </oag-audio>
+                </oag-chapter-audio>
+
             </oag-content>
         </oag-application>
     </body>
