--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,9 @@
                         <a href="/">Home</a>
                     </li>
                     <li>
+                        <a href="/demos/audio.html">Audio</a>
+                    </li>
+                    <li>
                         <a href="/demos/screen-map.html">Screen Map</a>
                     </li>
                     <li>
