--- a/src/demos/audio.html
+++ b/src/demos/audio.html
@@ -25,8 +25,8 @@
                     position: relative;
 
                     .number {
-                        background-color: var(--oag-colors-secondary);
-                        color: var(--oag-colors-on-secondary);
+                        background-color: var(--oag-colors-contrast);
+                        color: var(--oag-colors-on-contrast);
                         font-size: 1.35rem;
                         width: 60px;
                         height: 60px;
