--- a/src/demos/audio.html
+++ b/src/demos/audio.html
@@ -79,8 +79,7 @@
                 </ul>
             </oag-content>
             <oag-content>
-                <oag-audio
-                    source="https://file-examples.com/storage/fe2ae8fbf56883b019a7d6a/2017/11/file_example_MP3_700KB.mp3"
+                <oag-audio source="https://data.ortsarchiv-gemeinlebarn.org/samples/file_example_MP3_700KB.mp3"
                     headline="Titel">
                     Description
                 </oag-audio>
@@ -90,8 +89,7 @@
                     <h2>Audio Guide</h2>
                     <div class="item">
                         <div class="number">1</div>
-                        <oag-audio
-                            source="https://file-examples.com/storage/fe2ae8fbf56883b019a7d6a/2017/11/file_example_MP3_700KB.mp3"
+                        <oag-audio source="https://data.ortsarchiv-gemeinlebarn.org/samples/file_example_MP3_700KB.mp3"
                             headline="Titel">
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea numquam assumenda repellat
                             porro quidem. Labore, esse temporibus, animi maiores neque nobis fuga laudantium natus unde
@@ -100,16 +98,14 @@
                     </div>
                     <div class="item">
                         <div class="number">2</div>
-                        <oag-audio
-                            source="https://file-examples.com/storage/fe2ae8fbf56883b019a7d6a/2017/11/file_example_MP3_700KB.mp3"
+                        <oag-audio source="https://data.ortsarchiv-gemeinlebarn.org/samples/file_example_MP3_700KB.mp3"
                             headline="Titel">
                             Description
                         </oag-audio>
                     </div>
                     <div class="item">
                         <div class="number">3</div>
-                        <oag-audio
-                            source="https://file-examples.com/storage/fe2ae8fbf56883b019a7d6a/2017/11/file_example_MP3_700KB.mp3"
+                        <oag-audio source="https://data.ortsarchiv-gemeinlebarn.org/samples/file_example_MP3_700KB.mp3"
                             headline="Titel">
                             Description
                         </oag-audio>
