--- a/src/demos/content.html
+++ b/src/demos/content.html
@@ -25,19 +25,28 @@
                         <a href="/">Home</a>
                     </li>
                     <li>
-                        <a href="/demos/screen-map.html">Screen Map</a>
+                        <a href="/demos/audio.html">Audio</a>
                     </li>
                     <li>
                         <a href="/demos/cockpit.html">Cockpit</a>
                     </li>
                     <li>
-                        <a href="/demos/hero.html">Hero</a>
+                        <a href="/demos/content.html">Content</a>
                     </li>
                     <li>
                         <a href="/demos/figure.html">Figure</a>
                     </li>
                     <li>
-                        <a href="/demos/content.html">Content</a>
+                        <a href="/demos/gallery.html">Gallery</a>
+                    </li>
+                    <li>
+                        <a href="/demos/hero.html">Hero</a>
+                    </li>
+                    <li>
+                        <a href="/demos/project.html">Project</a>
+                    </li>
+                    <li>
+                        <a href="/demos/screen-map.html">Screen Map</a>
                     </li>
                 </ul>
 
