--- a/src/demos/project.html
+++ b/src/demos/project.html
@@ -27,6 +27,36 @@
 
             <oag-content>
                 <h1>Project Demo</h1>
+
+                <ul>
+                    <li>
+                        <a href="/">Home</a>
+                    </li>
+                    <li>
+                        <a href="/demos/audio.html">Audio</a>
+                    </li>
+                    <li>
+                        <a href="/demos/cockpit.html">Cockpit</a>
+                    </li>
+                    <li>
+                        <a href="/demos/content.html">Content</a>
+                    </li>
+                    <li>
+                        <a href="/demos/figure.html">Figure</a>
+                    </li>
+                    <li>
+                        <a href="/demos/gallery.html">Gallery</a>
+                    </li>
+                    <li>
+                        <a href="/demos/hero.html">Hero</a>
+                    </li>
+                    <li>
+                        <a href="/demos/project.html">Project</a>
+                    </li>
+                    <li>
+                        <a href="/demos/screen-map.html">Screen Map</a>
+                    </li>
+                </ul>
             </oag-content>
 
             <oag-content class="projects">
