--- a/src/index.html
+++ b/src/index.html
@@ -36,38 +36,31 @@
                         <a href="/">Home</a>
                     </li>
                     <li>
-                        <a href="/demos/screen-map.html">Screen Map</a>
+                        <a href="/demos/audio.html">Audio</a>
                     </li>
                     <li>
                         <a href="/demos/cockpit.html">Cockpit</a>
                     </li>
                     <li>
-                        <a href="/demos/hero.html">Hero</a>
+                        <a href="/demos/content.html">Content</a>
                     </li>
                     <li>
                         <a href="/demos/figure.html">Figure</a>
                     </li>
                     <li>
-                        <a href="/demos/content.html">Content</a>
+                        <a href="/demos/gallery.html">Gallery</a>
+                    </li>
+                    <li>
+                        <a href="/demos/hero.html">Hero</a>
                     </li>
                     <li>
                         <a href="/demos/project.html">Project</a>
                     </li>
+                    <li>
+                        <a href="/demos/screen-map.html">Screen Map</a>
+                    </li>
                 </ul>
             </oag-content>
-
-            <!-- <oag-menu>
-            <oag-menu-item onClick="openDemo('hero')">Hero</oag-menu-item>
-            <oag-menu-item onClick="openDemo('menu')">Menü & Screen Map</oag-menu-item>
-            <oag-menu-item onClick="openDemo('figure')">Figure</oag-menu-item>
-            <oag-menu-item onClick="openDemo('content')">Content</oag-menu-item>
-            <oag-menu-item onClick="openScreenMap()">
-                <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512">
-                    <path d="M313.27 124.64L198.73 51.36a32 32 0 00-29.28.35L56.51 127.49A16 16 0 0048 141.63v295.8a16 16 0 0023.49 14.14l97.82-63.79a32 32 0 0129.5-.24l111.86 73a32 32 0 0029.27-.11l115.43-75.94a16 16 0 008.63-14.2V74.57a16 16 0 00-23.49-14.14l-98 63.86a32 32 0 01-29.24.35zM328 128v336M184 48v336" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" />
-                </svg>
-                <span>Übersichtskarte öffnen</span>
-            </oag-menu-item>
-        </oag-menu> -->
 
         </oag-application>
     </body>
