new styling options

--- a/src/demos/audio.html
+++ b/src/demos/audio.html
@@ -95,6 +95,31 @@
                     <h2>Audio Guide</h2>
                     <div class="item">
                         <div class="number">1</div>
+                        <oag-audio
+                            source="https://data.ortsarchiv-gemeinlebarn.org/volksschule-neubau/audio/01_Anton_Linzbauer.mp3">
+                            Anton Linzbauer erinnert sich an seinen ersten Schultag Ende der 1950er-Jahre in
+                            Gemeinlebarn
+
+                        </oag-audio>
+                    </div>
+
+                    <div class="item">
+                        <div class="number">2</div>
+                        <oag-audio class="audio-item__element"
+                            headline="Anton Linzbauer erinnert sich an die ersten Übungen in der alten Volksschule von Gemeinlebarn"
+                            source="https://data.ortsarchiv-gemeinlebarn.org/volksschule-neubau/audio/02_Anton_Linzbauer.mp3">
+                        </oag-audio>
+                    </div>
+
+                    <div class="item">
+                        <div class="number">3</div>
+                        <oag-audio headline="Anton Bauer erzählt über die abgestützte Decke in den Klassenräumen"
+                            source="https://data.ortsarchiv-gemeinlebarn.org/volksschule-neubau/audio/03_Anton_Bauer.mp3">
+                        </oag-audio>
+                    </div>
+
+                    <div class="item">
+                        <div class="number">1</div>
                         <oag-audio source="https://data.ortsarchiv-gemeinlebarn.org/samples/file_example_MP3_700KB.mp3"
                             headline="Titel">
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea numquam assumenda repellat
