Implement half content and new font size switch

--- a/src/demos/content.html
+++ b/src/demos/content.html
@@ -9,11 +9,12 @@
         <script type="module" src="/build/oag-components.esm.js"></script>
         <script nomodule src="/build/oag-components.js"></script>
         <link rel="stylesheet" href="/build/oag-components.css" />
-
     </head>
 
     <body>
         <oag-application>
+
+            <oag-font-size></oag-font-size>
 
 
             <oag-content>
@@ -182,6 +183,57 @@
             { "src": "https://data.ortsarchiv-gemeinlebarn.org/meilensteine/fotos/ausgrabung/Meilensteine-Fotos-059-vsc.jpeg", "caption": "Zwischenlagerung und Untersuchung (Fotoserie Graf, Bild Nr. 59)" },
         ]'></oag-gallery>
             </oag-content>
+
+
+            <oag-figure caption="Table">
+
+                <table>
+                    <tbody>
+                        <tr>
+                            <th>Schulbaufonds, Subvention</th>
+                            <td>380.000 Schilling</td>
+                        </tr>
+                        <tr>
+                            <th>Schulbaufonds, Zinsfreies Darlehen</th>
+                            <td>380.000 Schilling</td>
+                        </tr>
+                        <tr>
+                            <th>Schulbauanleihe 1963</th>
+                            <td>245.000 Schilling</td>
+                        </tr>
+                        <tr>
+                            <th>Schulbaurücklage der Volksschulgemeinde</th>
+                            <td>55.000 Schilling</td>
+                        </tr>
+                        <tr>
+                            <th>Gemeinde Gemeinlebarn (73 % des Gemeindeanteils)</th>
+                            <td>175.200 Schilling</td>
+                        </tr>
+                        <tr>
+                            <th>Gemeinde Frauendorf (27 % des Gemeindeanteils)</th>
+                            <td>64.800 Schilling</td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <th>Errechneter Finanzierungsbedarf</th>
+                            <td>1.300.000 Schilling</td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </oag-figure>
+
+            <oag-content layout="half">
+                <oag-figure caption="Left">
+                    <img src="https://data.ortsarchiv-gemeinlebarn.org/meilensteine/fotos/ausgrabung/Meilensteine-Fotos-059-vsc.jpeg"
+                        alt="">
+                </oag-figure>
+                <oag-figure caption="Right">
+                    <img src="https://data.ortsarchiv-gemeinlebarn.org/meilensteine/fotos/ausgrabung/Meilensteine-Fotos-059-vsc.jpeg"
+                        alt="">
+                </oag-figure>
+            </oag-content>
+
             <oag-content>
 
                 <h2>Misc</h2>
